syntax="proto3";

package grpclab;

option go_package = "proto";

message Credentials {
    string user_name = 1;
    string password = 2;
}
